name:                lowlevel
version:             0.1.2.0-SNAPSHOT
homepage:            https://github.com/jBugman/lowlevel#readme
license:             MIT
license-file:        LICENSE
author:              Sergey Parshukov
maintainer:          codedby@bugman.me
copyright:           2017 Sergey Parshukov
category:            Binary, Emulator
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude
  exposed-modules:     Adders
                     , Bits
                     , Gates
-- other-modules:    
  build-depends:       base >= 4.7 && < 5
                     , protolude

test-suite lowlevel-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude
  build-depends:       base
                     , lowlevel
                     , protolude
                     , hspec
                     , hspec-smallcheck
                     , smallcheck

source-repository head
  type:     git
  location: https://github.com/jBugman/lowlevel
